[project]
name = "vod-downloader"
version = "1.0.0"
description = ""
authors = [{ name = "aoqia", email = "aoqia@aoqia.dev" }]
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.poetry]
package-mode = false
packages = [{ include = "vod_downloader", from = "src" }]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
